# rnnoise

./: .gitignore  CMakeLists.txt  README.MD  go.mod  go.sum  main.go  make.sh  rnnoise.go  rnnoise_pkgconfig.go  rnnoise_static.go
example/: main.go
rnnoise/: rnnoise.go
